Added nice intro imgages to each page

--- a/_data/seo.yml
+++ b/_data/seo.yml
@@ -1,4 +1,6 @@
 google_analytics_id: ""  
 meta_twitter_site: "@flexablemedia"
 meta_twitter_creator: "@flexablemedia"
+acks: 'Illustrations by <a class="zerostatic" href="https://icons8.com/illustrations/author/zD2oqC8lLBBA">Icons 8</a> from <a class="zerostatic" href="https://icons8.com/illustrations">Ouch!</a>'
 copyright_text: 'Built on free Jekyll theme by <a class="zerostatic" href="https://www.zerostatic.io">www.zerostatic.io</a>'
+
